syntax = "proto3";

package com.github.fckng0d.userservice;

option java_multiple_files = true;
option java_package = "com.github.fckng0d.grpc.userservice";
option java_outer_classname = "UserServiceProto";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

// Сервис для пользователей
service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc GetUserById (GetUserByIdRequest) returns (UserResponse);
  rpc GetUserByUsername (GetUserByUsernameRequest) returns (UserResponse);
  rpc UpdateUsername (UpdateUsernameRequest) returns (UserResponse);
  rpc UpdatePasswordHash (UpdatePasswordHashRequest) returns (UserResponse);
  rpc UpdateEmail (UpdateEmailRequest) returns (UserResponse);
  rpc DeleteUserById (DeleteUserByIdRequest) returns (google.protobuf.Empty);
  rpc AssignRole (AssignRoleRequest) returns (UserResponse);
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password_hash = 3;
}

message GetUserByIdRequest {
  string user_id = 1;  // UUID в виде строки
}

message GetUserByUsernameRequest {
  string username = 1;
}

message UpdateUsernameRequest {
  string user_id = 1;  // UUID в виде строки
  string new_username = 2;
}

message UpdatePasswordHashRequest {
  string user_id = 1;  // UUID в виде строки
  string password_hash = 2;
}

message UpdateEmailRequest {
  string user_id = 1;  // UUID в виде строки
  string new_email = 2;
}

message DeleteUserByIdRequest {
  string user_id = 1;  // UUID в виде строки
}

message AssignRoleRequest {
  string user_id = 1;
  string role_name = 2;
}

message UserResponse {
  string user_id = 1;  // UUID в виде строки
  string username = 2;
  string email = 3;
  repeated string roles = 4;  // Список ролей
}



service UserProfileService {
  rpc GetUserProfileById (GetUserProfileByIdRequest) returns (UserProfileResponse);
  rpc AddMusicianProfileId (AddMusicianProfileRequest) returns (google.protobuf.Empty);
  rpc SetImageId (SetImageIdRequest) returns (google.protobuf.Empty);
}

message GetUserProfileByIdRequest {
  string profile_id = 1; // UUID в виде строки
}

message AddMusicianProfileRequest {
  string profile_id = 1; // UUID профиля
  string musician_profile_id = 2; // UUID музыкального профиля
}

message SetImageIdRequest {
  string profile_id = 1; // UUID профиля
  int64 image_id = 2; // ID изображения
}

message UserProfileResponse {
  string profile_id = 1; // UUID профиля
  string musician_profile_id = 2; // UUID музыкального профиля
  int64 image_id = 3;
}



service UserRoleService {
  rpc GetRoleByName (GetRoleByNameRequest) returns (UserRoleResponse);
  rpc CreateRole (CreateRoleRequest) returns (UserRoleResponse);
  rpc GetUsersByRoleName (GetUsersByRoleNameRequest) returns (UsersByRoleNameResponse);
  rpc UpdateUserRole (UpdateUserRoleRequest) returns (google.protobuf.Empty);
  rpc DeleteUserRoleByName (DeleteUserRoleByNameRequest) returns (google.protobuf.Empty);
}

message GetRoleByNameRequest {
  string role_name = 1; // Название роли
}

message CreateRoleRequest {
  string name = 1; // Название роли
  string description = 2; // Описание роли
}

message GetUsersByRoleNameRequest {
  string role_name = 1; // Название роли
}

message UpdateUserRoleRequest {
  string old_name = 1; // Старое имя роли
  string new_name = 2; // Новое имя роли
  string description = 3; // Описание роли
}

message DeleteUserRoleByNameRequest {
  string role_name = 1; // Название роли
}

message UserRoleResponse {
  int32 role_id = 1;
  string name = 2; // Название роли
  string description = 3; // Описание роли
}

message UsersByRoleNameResponse {
  repeated string user_ids = 1;
}